<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="square_root">√</string>
    <string name="pi_number">π</string>
    <string name="exponent">^</string>
    <string name="factorial">!</string>
    <string name="all_clear">AC</string>
    <string name="brackets">( )</string>
    <string name="percentage">%</string>
    <string name="division">÷</string>
    <string name="multiplication">×</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="delete">⌫</string>
    <string name="equality">=</string>
</resources>