<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_upper_layout"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent">


        <HorizontalScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:gravity="end"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="64sp"
                tools:text="0" />
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:paddingHorizontal="4dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/display">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSquareRoot"
                style="@style/Button.Style.Extra.Functions"
                android:text="@string/square_root" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPiNumber"
                style="@style/Button.Style.Extra.Functions"
                android:text="@string/pi_number"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnExponent"
                style="@style/Button.Style.Extra.Functions"
                android:text="@string/exponent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFactorial"
                style="@style/Button.Style.Extra.Functions"
                android:text="@string/factorial" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnClear"
                style="@style/Button.Style"
                android:backgroundTint="@color/light_pink"
                android:lines="1"
                android:text="@string/all_clear" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBrackets"
                style="@style/Button.Style.Blue"
                android:text="@string/brackets" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPercent"
                style="@style/Button.Style.Blue"
                android:text="@string/percentage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDivide"
                style="@style/Button.Style.Blue"
                android:text="@string/division" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNumSeven"
                style="@style/Button.Style.Light.Gray"
                android:text="@string/seven" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNumEight"
                style="@style/Button.Style.Light.Gray"
                android:text="@string/eight" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNumNine"
                style="@style/Button.Style.Light.Gray"
                android:text="@string/nine" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMultiply"
                style="@style/Button.Style.Blue"
                android:text="@string/multiplication" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNumFour"
                style="@style/Button.Style.Light.Gray"
                android:text="@string/four" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNumFive"
                style="@style/Button.Style.Light.Gray"
                android:text="@string/five" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNumSix"
                style="@style/Button.Style.Light.Gray"
                android:text="@string/six" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMinus"
                style="@style/Button.Style.Blue"
                android:text="@string/minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNumOne"
                style="@style/Button.Style.Light.Gray"
                android:text="@string/one" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNumTwo"
                style="@style/Button.Style.Light.Gray"
                android:text="@string/two" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNumThree"
                style="@style/Button.Style.Light.Gray"
                android:text="@string/three" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPlus"
                style="@style/Button.Style.Blue"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNumZero"
                style="@style/Button.Style.Light.Gray"
                android:text="@string/zero" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNumDot"
                style="@style/Button.Style.Light.Gray"
                android:text="@string/dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNumDelete"
                style="@style/Button.Style.Light.Gray"
                android:text="@string/delete" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEquality"
                style="@style/Button.Style"
                android:text="@string/equality"
                app:backgroundTint="#cfe4ff" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>